--- a/HelpTree/app/src/main/res/layout/activity_chatbot.xml
+++ b/HelpTree/app/src/main/res/layout/activity_chatbot.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -23,7 +22,7 @@
             android:layout_weight=".5"
             android:background="@drawable/btn_round"
             android:backgroundTint="@android:color/white"
-            android:hint="Type a message..."
+            android:hint="@string/type_a_message"
             android:padding="10dp"
             android:singleLine="true" />
 
@@ -33,10 +32,9 @@
             android:layout_height="match_parent"
             android:layout_margin="10dp"
             android:layout_weight="1"
-            android:background="@drawable/btn_round"
-            android:backgroundTint="#26A69A"
-            android:text="Send"
-            android:textColor="@android:color/white" />
+            android:background="@drawable/square_bg"
+            android:text="@string/send"
+            android:textColor="@color/black" />
 
     </LinearLayout>
 
