--- a/HelpTree/app/src/main/res/layout/message_items.xml
+++ b/HelpTree/app/src/main/res/layout/message_items.xml
@@ -12,7 +12,7 @@
         android:background="@drawable/send_round"
         android:backgroundTint="#26A69A"
         android:padding="14dp"
-        android:text="This is a sample message that will appear"
+        android:text="@string/samplemsg"
         android:textColor="@android:color/white"
         android:textSize="14sp" />
 
@@ -26,9 +26,7 @@
         android:background="@drawable/receive_round"
         android:backgroundTint="#FF7043"
         android:padding="14dp"
-        android:text="This is a sample message that will appear"
+        android:text="@string/samplemsg"
         android:textColor="@android:color/white"
         android:textSize="14sp" />
-
-
 </RelativeLayout>
